--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "google/reCAPTCHA": "^1.1",
+        "greggilbert/recaptcha": "^2.2",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "toin0u/geocoder-laravel": "^4.0",
