--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "glyph": "^0.0.2",
         "gulp": "^3.9.1",
         "laravel-elixir-vueify": "^2.0.0",
+        "recaptcha": "^1.2.1",
         "vue-router": "^3.0.1",
         "yarn": "^1.3.2"
     }
