--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
+        "axios": "^0.18.0",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "bootstrap-table": "^1.11.2",
+        "chart.js": "2.7.x",
+        "chartjs": "^0.3.24",
         "datatables": "^1.10.13",
         "datatables.net-dt": "^1.10.16",
         "font-awesome": "^4.7.0",
@@ -27,6 +29,9 @@
         "gulp": "^3.9.1",
         "laravel-elixir-vueify": "^2.0.0",
         "recaptcha": "^1.2.1",
+        "vue-axios": "^2.1.1",
+        "vue-chartjs": "^3.3.1",
+        "vue-resource": "^1.5.0",
         "vue-router": "^3.0.1",
         "yarn": "^1.3.2"
     }
